# uni_projects

./: README.md
database_system/1.projekt/: NÁJEMNÍ BYTY.pptx  dokumentace.docx
database_system/2.projekt/: fyzicky_model.pages  odpovede  prikazy_sql.txt  sql_tabulka.ddl  xcervako_druhy.csv  xcervako_exemplare.csv  xcervako_jazyky.csv  xcervako_klicova_slova.csv  xcervako_knihy.csv  xcervako_knihy.xlsx  xcervako_oddeleni.csv  xcervako_oddeleni.sql  xcervako_osoby.csv  xcervako_vypujcky.csv  xcervako_vyrazy.csv
database_system/2.projekt/xcervako/: xcervako_druhy.xml  xcervako_exemplare.json  xcervako_jazyky.json  xcervako_klicova_slova.xml  xcervako_knihy.xml  xcervako_vypujcky.html
database_system/3.projekt/: priklady.txt
project_alhambra/: .gitignore  build.gradle  settings.gradle
project_c++/Projekt/: CMakeLists.txt  Engine.cpp  Engine.hpp  HotoveProdukty.cpp  HotoveProdukty.hpp  HotoveProduktyTovarna.cpp  HotoveProduktyTovarna.h  Material.cpp  Material.h  Objednavka.cpp  Objednavka.hpp  PerinaTovarna.cpp  PerinaTovarna.h  Sklad.cpp  Sklad.hpp  Stroj.cpp  Stroj.h  TypMaterialu.cpp  TypMaterialu.h  TypProduktu.cpp  TypProduktu.h  VankusTovarna.cpp  VankusTovarna.h  Vyrobna.cpp  Vyrobna.h  Zakaznik.cpp  Zakaznik.hpp  main.cpp
project_c++/Projekt.xcodeproj/: project.pbxproj
scrape/: data.csv  scrape.py
web_application/projekt/public/: .htaccess
web_application/projekt/src/: location.php  routes.php
web_application/projekt/templates/: contacts.latte  detail-meeting.latte  index.latte  layout.latte  locations.latte  meetings.latte  menu.latte  (+9 more)
(+48 files in other folders)
